# app-store-connect-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  lint.yaml  test.yml
app_store_connect_client/: __init__.py  analytics.py  config.py  dataclass.py  enum.py  exceptions.py  log.py  query.py
app_store_connect_client/jsonschema/: metrics.json  sources.json
