[tool.poetry]
name = "app-store-connect-client"
version = "0.0.0"
description = "Python package for App Store connect Analytics."
authors = ["shmokmt <shoma.okamoto@fuller.co.jp>"]
homepage = "https://github.com/shmokmt"
repository = "https://github.com/shmokmt/app-store-connect-client"
documentation = "https://github.com/shmokmt/app-store-connect-client/wiki"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
black = "^19.10b0"
python-dotenv = "^0.13.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
rope = "^0.16.0"
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
